--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -1,9 +1,9 @@
 name: Build & Deploy Blog to Azure
 
-on:
-  push:
-    branches: [ "main" ]
-  workflow_dispatch:
+#on:
+ # push:
+  #  branches: [ "main" ]
+ # workflow_dispatch:
 
 env:
   AZURE_WEBAPP_NAME: blog-ipshopy-app   # your Azure Web App name
